# trade-tariff-lambdas-fpo-search

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Dockerfile.inference  LICENSE.txt  LICENSE.txt   Makefile  README.md  api.py  benchmark.py  download_transformer.py  flake.nix  fpo_args_parser.py  handler.py  infer.py  pyproject.toml  quantize_model.py  requirements.txt  requirements_lambda.txt  search-config.toml  serverless.yml  shell.nix  train-submodel0.py  train-submodel1.py  train-submodel2  train.py  train_args.py  train_section
.circleci/: benchmark-thresholds.toml  config.yml  ec2  ec2.sh  ecr  ecr.sh
.github/: benchmark-thresholds.toml  dependabot.yml  pull_request_template.md
.packer/: Dockerfile  build  provision  template.pkr.hcl
aws_lambda/: aws_handler.py  contextual_corrector.py  handler.py  quote_tokeniser.py  spelling_corrector.py
data_sources/: basic_csv.py  commodities.py  data_source.py  search_references  search_references.py  static.py  trade_tariff.py  tradesets.py  vague_terms.py
docs/: keeping_amis_updated.md  understanding-model-generation.md  understanding_cleaning.md  understanding_model_generation.md
fpo_search/: Makefile  README.md  pyproject.toml
inference/: infer.py
lib/: read_description_csv.py
model/: classifier_model.py  model.py
reference_data/: brands.csv  exact_english_terms.txt  extra_references.csv  incorrect_code_desc_pairs.csv  known_english_words.txt  partial_english_terms.txt  phrases_to_remove.txt  search_references.json  vague_terms.csv  vague_terms_patterns.txt
spelling_corrector_spike/: gpt2_spelling_corrector.py  nouns_spelling_corrector.py  openai_spelling_corrector.py  t5_spelling_corrector.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  data.tf  iam.tf  locals.tf  main.tf  script.sh  user_data.tftpl  versions.tf  vpc.tf
tests/: test_cleaning_pipeline.py  test_handler.py  (+2 more)
(+54 files in other folders)
