[project]
name = "hmrc_fpo_categorisation_api"
description = "FPO Parcel Item Categorisation API"
version = "0.1.0"
dependencies = [
    "sentence-transformers", # Model/embedding generation
    "torch", # Model/embedding generation
    "fnv-c", # Hashing of cached data keys during embedding generation
    "tqdm", # Benchmarking
    "prettytable", # Benchmarking
]

[project.optional-dependencies]
dev = [
    "aws-lambda-powertools",
    "fastapi",
    "pre-commit",
    "ruff",
    "uvicorn",
]

[tool.setuptools]
py-modules = []
