[project]
name = "hmrc_fpo_categorisation_api"
description = "FPO Parcel Item Categorisation API"
version = "0.1.0"
dependencies = [
    "aws-lambda-powertools",
    "sentence-transformers", # Model/embedding generation
    "torch", # Model/embedding generation
    "tqdm", # Benchmarking
    "prettytable", # Benchmarking
    "toml",
    "lingua-language-detector",
    "dill", # Flexible marshalling for forked multiprocessing
    "requests" # HTTP requests
]

[project.optional-dependencies]
dev = [
    "aws-lambda-powertools",
    "pre-commit",
    "ruff",
]

[tool.setuptools]
py-modules = []
